--- a/index.html
+++ b/index.html
@@ -4,50 +4,56 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="normalize.css">
+  <link rel="stylesheet" href="main.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=PT+Serif:wght@400;700&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <title>The creative crew</title>
 </head>
 <body>
+<div class="container">
   <header>
     <h1>The creative crew</h1>
+    <div class="whoweare">
+      <h2>Who we are</h2>
+      <p>We are team of creatively diverse. driven. innovative individuals working in various locations from the world.</p>
+    </div>
   </header>
   <main>
-    <h2>Who we are</h2>
-    <p>We are team of creatively diverse. driven. innovative individuals working in various locations from the world.</p>
-    <section>
-      <figure>
-        <img src="photo1.png" alt="photo Bill Mahoney">
-        <h3>Bill Mahoney</h3>
-        <p>product owner</p>
-      </figure>
-      <figure>
-        <img src="photo2.png" alt="photo Saba Cabrera">
-        <h3>Saba Cabrera</h3>
-        <p>art director</p>
-      </figure>
-      <figure>
-        <img src="photo3.png" alt="photo Shae Le">
-        <h3>Shae Le</h3>
-        <p>tech lead</p>
-      </figure>
-      <figure>
-        <img src="photo4.png" alt="photo Skyalah Lu">
-        <h3>Skyalah Lu</h3>
-        <p>ux designer</p>
-      </figure>
-      <figure>
-        <img src="photo5.png" alt="photo Griff Richards">
-        <h3>Griff Richards</h3>
-        <p>developer</p>
-      </figure>
-      <figure>
-        <img src="photo6.png" alt="photo Stan John">
-        <h3>Stan John</h3>
-        <p>developer</p>
-      </figure>
-    </section>
+    <figure>
+      <img src="photo1.png" alt="photo Bill Mahoney">
+      <h3>Bill Mahoney</h3>
+      <p>product owner</p>
+    </figure>
+    <figure>
+      <img src="photo2.png" alt="photo Saba Cabrera">
+      <h3>Saba Cabrera</h3>
+      <p>art director</p>
+    </figure>
+    <figure>
+      <img src="photo3.png" alt="photo Shae Le">
+      <h3>Shae Le</h3>
+      <p>tech lead</p>
+    </figure>
+    <figure>
+      <img src="photo4.png" alt="photo Skyalah Lu">
+      <h3>Skyalah Lu</h3>
+      <p>ux designer</p>
+    </figure>
+    <figure>
+      <img src="photo5.png" alt="photo Griff Richards">
+      <h3>Griff Richards</h3>
+      <p>developer</p>
+    </figure>
+    <figure>
+      <img src="photo6.png" alt="photo Stan John">
+      <h3>Stan John</h3>
+      <p>developer</p>
+    </figure>
   </main>
   <footer>
     <p>created by <span>mrsepu</span> - devChallenges.io</p>
   </footer> 
+</div>
 </body>
 </html>
